--- a/openxai/config.json
+++ b/openxai/config.json
@@ -2,7 +2,7 @@
   "heart_failure_clinical_records_dataset": {
     "target_label": "DEATH_EVENT"
   },
-  "ggg12": {
-    "target_label": "fdsafd"
+  "MBA": {
+    "target_label": "admission"
   }
 }
