support student performance grades - imprefect example

--- a/openxai/config.json
+++ b/openxai/config.json
@@ -4,5 +4,8 @@
   },
   "MBA": {
     "target_label": "admission"
+  },
+  "student_performance_factors": {
+    "target_label": "Exam_Score"
   }
 }
