--- a/openxai/config.json
+++ b/openxai/config.json
@@ -7,5 +7,8 @@
   },
   "student_performance_factors": {
     "target_label": "Exam_Score"
+  },
+  "undergraduate_admission_test_survey_in_bangladesh":{
+    "target_label": "University"
   }
 }
