add support of "car prediction" - multiple target labels kind, impreffect example yet

--- a/openxai/config.json
+++ b/openxai/config.json
@@ -10,5 +10,8 @@
   },
   "undergraduate_admission_test_survey_in_bangladesh":{
     "target_label": "University"
+  },
+  "car_price_prediction": {
+    "target_label": "Model"
   }
 }
